test/expected/cast_a3i.out
cast x into array 3 of int
            ^
13: error: can not cast into array; did you mean cast into pointer?
